Imported upstream version '0.5.0' of 'upstream'

--- a/docs/_static/custom.css
+++ b/docs/_static/custom.css
@@ -17,6 +17,11 @@
     font-weight: normal;
 }
 
+.text-blue {
+    color: var(--automatika-secondary);
+    font-weight: normal;
+}
+
 /* === Global link styling === */
 a {
     color: var(--automatika-secondary);
